--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   firebase_auth: ^3.1.1
   cloud_firestore: ^2.5.2
   get: ^4.3.8
+  google_fonts: ^2.1.0
+
 
 dev_dependencies:
   flutter_test:
