--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,8 @@ dependencies:
   cloud_firestore: ^2.5.2
   get: ^4.3.8
   google_fonts: ^2.1.0
-
+  firebase_storage: ^8.0.3
+  file_picker: ^3.0.1
 
 dev_dependencies:
   flutter_test:
